Alinhamento das grids views

--- a/views/caixa/historico.html
+++ b/views/caixa/historico.html
@@ -65,7 +65,11 @@
 
 <input type="text" id="transitory" name="transitory">
 <div class="container" id="ret">
-<br>
+
+<div class="alert alert-warning alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <strong>Dois cliques na linha da tabela</strong> , para o registro completo da venda.
+</div>
 <table id="dataTable" class="table table-striped hover order-column" cellspacing="0" width="100%" >
 <thead>
 	<tr>
